# ecoji.rs

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md  build.rs
.github/workflows/: main.yml
src/: chars.rs  decode.rs  emojis.rs  encode.rs  lib.rs
