[package]
authors = ["Vladimir Matveev <vladimir.matweev@gmail.com>"]
name = "ecoji"
version = "0.1.0"

[features]
build-binary = ["clap"]

[dependencies]
phf = "0.7.21"
clap = { version = "2.31.1", optional = true }

[build-dependencies]
phf_codegen = "0.7.21"

[lib]
name = "ecoji"

[[bin]]
name = "ecoji"
required-features = ["build-binary"]
